# copper_engine

./: Cargo.toml  readme.md
examples/: free_camera.rs  readme.md  spinning_dragon.rs
shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: lib.rs  main.rs
src/audio/: audio_source.rs  mod.rs
src/input/: mod.rs
src/math/: euler_angle.rs  look_at_coordinate.rs  matrix4x4.rs  mod.rs  quaternion.rs  vector3.rs
src/model_loading/: model_loader.rs
src/models/: model_loader.rs
src/object/: game_object.rs  mod.rs  model_loader.rs  vertex.rs
src/structs/: audio_source.rs  audio_source_global.rs  audio_source_local.rs  camera.rs  input_manager.rs  material.rs  mod.rs  object.rs  scene.rs  vertex.rs
