[package]
name = "copper_engine"
authors = ["Anto Keinänen"]
version = "0.0.1"
edition = "2021"
description = "Basic game engine library for simple 3d games."
license = "GPL-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.32.1"
image = "0.24.3"
tobj = "3.2.3"
egui_glium = "0.19.0"
egui = "0.19.0"
soloud = "1"
libm = "0.2.5"
